--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "dip-finder",
   "version": "1.0.0",
+  "author": "Florian Bühler <florian-buehler@outlook.com>",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .js,.ts,.tsx",
+    "fix-lint": "eslint . --ext .js,.ts,.tsx --fix"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/florianbuehler/dip-finder"
+  },
+  "bugs": {
+    "url": "https://github.com/florianbuehler/dip-finder/issues"
   },
   "dependencies": {
     "next": "12.3.0",
@@ -17,10 +27,16 @@
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "autoprefixer": "^10.4.11",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
+    "eslint-config-next": "^12.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
