--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "url": "https://github.com/florianbuehler/dip-finder/issues"
   },
   "dependencies": {
+    "@next-auth/firebase-adapter": "^1.0.1",
+    "@types/nookies": "^2.0.3",
+    "firebase": "^9.10.0",
     "next": "12.3.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
