--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "dependencies": {
     "@next-auth/firebase-adapter": "^1.0.1",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
+    "@tanstack/react-query": "^4.6.1",
+    "@tanstack/react-query-devtools": "^4.6.1",
     "@types/nookies": "^2.0.3",
     "firebase": "^9.10.0",
     "next": "12.3.0",
