--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "next": "12.3.0",
     "nookies": "^2.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^1.6.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
