--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.6.1"
+    "tailwind-merge": "^1.6.1",
+    "tailwind-scrollbar": "^2.1.0-preview.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
